--- a/Unit5.fmx
+++ b/Unit5.fmx
@@ -8,6 +8,7 @@ object Form5: TForm5
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   OnShow = FormShow
   DesignerMasterStyle = 0
   object Button1: TButton
@@ -90,8 +91,29 @@ object Form5: TForm5
     OnClick = SpeedButton2Click
   end
   object Label2: TLabel
+    AutoSize = True
     Position.X = 48.000000000000000000
     Position.Y = 16.000000000000000000
+    Size.Width = 0.000000000000000000
+    Size.Height = 48.000000000000000000
+    Size.PlatformDefault = False
     TabOrder = 12
+  end
+  object BindingsList1: TBindingsList
+    Methods = <>
+    OutputConverters = <>
+    Left = 20
+    Top = 5
+    object LinkFillControlToPropertyText: TLinkFillControlToProperty
+      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
+      Track = True
+      Control = ListBox1
+      Component = Label2
+      ComponentProperty = 'Text'
+      AutoFill = True
+      FillExpressions = <>
+      FillHeaderExpressions = <>
+      FillBreakGroups = <>
+    end
   end
 end
