--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -677,7 +677,7 @@ object Form1: TForm1
           Anchors = [akTop, akRight]
           Enabled = True
           ImageIndex = -1
-          Position.X = 34732.000000000000000000
+          Position.X = 35446.000000000000000000
           Position.Y = 32.000000000000000000
         end
       end
@@ -1072,23 +1072,11 @@ object Form1: TForm1
       OnExecute = Action11Execute
     end
   end
-  object BindSourceDB1: TBindSourceDB
-    ScopeMappings = <>
-    Left = 24
-    Top = 104
-  end
   object BindingsList1: TBindingsList
     Methods = <>
     OutputConverters = <>
-    Left = 20
+    Left = 36
     Top = 45
-    object LinkControlToField2: TLinkControlToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'INTERVAL'
-      Control = SpinBox1
-      Track = True
-    end
     object LinkControlToField5: TLinkControlToField
       Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
       DataSource = BindSourceDB4
@@ -1096,33 +1084,27 @@ object Form1: TForm1
       Control = Image4
       Track = False
     end
-    object LinkPropertyToFieldEnabled: TLinkPropertyToField
+    object LinkControlToPropertyEnabled: TLinkControlToProperty
       Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'STAY'
-      Component = SpinBox1
-      ComponentProperty = 'Enabled'
-    end
-    object LinkControlToField1: TLinkControlToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'STAY'
       Control = CheckBox1
       Track = True
-    end
-    object LinkPropertyToFieldEnabled2: TLinkPropertyToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'STAY'
       Component = Timer1
       ComponentProperty = 'Enabled'
+    end
+    object LinkControlToPropertyEnabled2: TLinkControlToProperty
+      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
+      Control = CheckBox1
+      Track = True
+      Component = SpinBox1
+      ComponentProperty = 'Enabled'
+      InitializeControlValue = False
     end
   end
   object BindSourceDB4: TBindSourceDB
     DataSet = DataModule4.FDTable2
     ScopeMappings = <>
-    Left = 24
-    Top = 168
+    Left = 40
+    Top = 128
   end
   object ImageList1: TImageList
     Source = <>
