--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -676,7 +676,7 @@ object Form1: TForm1
           Anchors = [akTop, akRight]
           Enabled = True
           ImageIndex = -1
-          Position.X = 36874.000000000000000000
+          Position.X = 39730.000000000000000000
           Position.Y = 32.000000000000000000
         end
       end
@@ -933,7 +933,6 @@ object Form1: TForm1
         OnClick = Button1Click
       end
       object RadioButton1: TRadioButton
-        GroupName = 'selection'
         IsChecked = True
         Position.X = 336.000000000000000000
         Position.Y = 176.000000000000000000
@@ -941,7 +940,6 @@ object Form1: TForm1
         Text = #24038#12363#12425#12402#12425#12367
       end
       object RadioButton2: TRadioButton
-        GroupName = 'selection'
         Position.X = 336.000000000000000000
         Position.Y = 224.000000000000000000
         TabOrder = 6
@@ -1054,7 +1052,7 @@ object Form1: TForm1
     end
     object Action9: TAction
       Category = 'navi'
-      Text = 'navi'
+      Text = 'Action9'
       OnExecute = Action9Execute
     end
     object Action10: TAction
@@ -1068,23 +1066,11 @@ object Form1: TForm1
       OnExecute = Action11Execute
     end
   end
-  object BindSourceDB1: TBindSourceDB
-    ScopeMappings = <>
-    Left = 24
-    Top = 104
-  end
   object BindingsList1: TBindingsList
     Methods = <>
     OutputConverters = <>
     Left = 20
     Top = 45
-    object LinkControlToField2: TLinkControlToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'INTERVAL'
-      Control = SpinBox1
-      Track = True
-    end
     object LinkControlToField5: TLinkControlToField
       Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
       DataSource = BindSourceDB4
@@ -1092,26 +1078,20 @@ object Form1: TForm1
       Control = Image4
       Track = False
     end
-    object LinkPropertyToFieldEnabled: TLinkPropertyToField
+    object LinkControlToPropertyEnabled: TLinkControlToProperty
       Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'STAY'
-      Component = SpinBox1
-      ComponentProperty = 'Enabled'
-    end
-    object LinkControlToField1: TLinkControlToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'STAY'
       Control = CheckBox1
       Track = True
-    end
-    object LinkPropertyToFieldEnabled2: TLinkPropertyToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB1
-      FieldName = 'STAY'
       Component = Timer1
       ComponentProperty = 'Enabled'
+    end
+    object LinkControlToPropertyEnabled2: TLinkControlToProperty
+      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
+      Control = CheckBox1
+      Track = True
+      Component = SpinBox1
+      ComponentProperty = 'Enabled'
+      InitializeControlValue = False
     end
   end
   object BindSourceDB4: TBindSourceDB
